--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: abusayed0206 # Your GitHub organization or username, where this repository lives
-repo: statuspage # The name of this repository
+owner: pothikapp # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: Website
@@ -15,7 +15,7 @@ status-website:
   cname: status.pothik.app
   # baseUrl: /statuspage
   logoUrl: https://pothik.app/images/logox.png
-  name: Pothik
+  name: 
   introTitle: "Pothik is a mentorship platform designed to empower students. Connect with experienced mentors who guide you toward your goals and aspirations. Here's your chance to thrive!"
   introMessage: Pothik 
   navbar:
